# Managing-Linux-Systems-with-Embedded-Perspective-Exercises

Exercise_2/: error_handling.c  random_generator.c
Exercise_3/: Makefile  Makefile_Basic.txt  main.c
Exercise_4/: CMakeLists.txt
Exercise_4/Executable_file/: CMakeCache.txt  Makefile  cmake_install.cmake  random_generator
Exercise_4/Header_files/: error_handling.h  random_generator.h
Exercise_5/: .gitignore  CMakeLists.txt
Exercise_5/src/: led.c
